fixing button alignment

--- a/site.css
+++ b/site.css
@@ -16,6 +16,7 @@
 
 .size {
 	width: 125px;
+    height: 65px;
 }
 
 .chords {
@@ -23,5 +24,10 @@
     text-align: right;
     font-weight: bold;
 	color: blue;
+}
+
+span {
+    display: inline-block;
+    vertical-align: middle;
 }
 	
